[project]
name = "klave"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Kevin Torrecilla", email = "andrestorrecilla.14@gmail.com" }
]
dependencies = [
    "flet==0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli==0.84.0",
    "flet-desktop==0.84.0",
    "flet-web==0.84.0",
]

[tool.flet]
org = "com.mycompany"
product = "klave"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.android]
# Build only the ARM64 Android variant to keep the APK smaller on modern phones.
target_arch = ["arm64-v8a"]

[tool.flet.app]
path = "src"
